--- a/wasserstoff/AiInternTask/requirements.txt
+++ b/wasserstoff/AiInternTask/requirements.txt
@@ -1,9 +1,4 @@
-Flask==2.3.2
-PyPDF2==3.0.1
-pymongo==4.5.0
-nltk==3.8.1
-Pillow==10.0.0
-flask_pymongo==2.3.0
-pdf2image==1.16.3
-pytest==7.4.2  # For testing
-gunicorn==21.2.0  # Optional, for deployment
+Flask
+pymongo
+gunicorn
+requests
